@@ -91,7 +91,7 @@ export default class InteractionCommandContext {
   locale(text: Translation, translateVars = {}): string {
     return this.i18n(text, {
       ...translateVars,
-      context: this.data.server.censored ? 'censor' : '',
+      context: this.data.server.censored ? 'censor' : null,
     });
   }
 }
